First version of the LPC 2021 Matrix UI component for BBB

--- a/bigbluebutton-html5/private/config/settings.yml
+++ b/bigbluebutton-html5/private/config/settings.yml
@@ -426,6 +426,9 @@ public:
       chat_poll_result: PUBLIC_CHAT_POLL_RESULT
     typingIndicator:
       enabled: true
+  matrix:
+    enabled: true
+    url: '/riot-embedded/index.html'
   note:
     enabled: true
     url: ETHERPAD_HOST
